Small changes and removed commented code in the Activator of the most of the modules

--- a/medication/medication.manager.configuration/src/main/resources/medication.properties
+++ b/medication/medication.manager.configuration/src/main/resources/medication.properties
@@ -7,3 +7,4 @@ medication.manager.debug.write.file=false
 medication.manager.health.treatment.service.mocked=false
 medication.manager.load.prescriptionsdtos=false
 medication.manager.insert.dummy.users.into.che=true
+medication.manager.issuer.interval.minutes=60
