--- a/.gitattributes
+++ b/.gitattributes
@@ -2849,40 +2849,58 @@ safety_home/safety_home.service.client/src/main/resources/images/Olga_Gkaitatzi.
 safety_home/safety_home.service.client/src/main/resources/images/Paulos_Spanidis.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/Taxiarchis_Tsaprounis.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/Unknown_Person.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/Unknown_Person.png -text
 safety_home/safety_home.service.client/src/main/resources/images/backup/Kostas_Kalogirou.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/backup/Nikos_Dimokas.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/backup/Olga_Gkaitatzi.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/backup/Paulos_Spanidis.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/backup/Taxiarchis_Tsaprounis.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/backup/Unknown_Person.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/backup/door_unlock.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/backup/door_unlock_small.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/closed_window.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/closed_window.png -text
 safety_home/safety_home.service.client/src/main/resources/images/closed_window_small.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/door_bell.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/door_bell.png -text
 safety_home/safety_home.service.client/src/main/resources/images/door_bell_small.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/door_close.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/door_close.png -text
 safety_home/safety_home.service.client/src/main/resources/images/door_close_small.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/door_lock.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/door_lock.png -text
 safety_home/safety_home.service.client/src/main/resources/images/door_lock_small.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/door_open.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/door_open.png -text
 safety_home/safety_home.service.client/src/main/resources/images/door_open_small.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/door_unlock.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/door_unlock.png -text
 safety_home/safety_home.service.client/src/main/resources/images/door_unlock_small.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/heating_off.png -text
+safety_home/safety_home.service.client/src/main/resources/images/heating_on.png -text
 safety_home/safety_home.service.client/src/main/resources/images/humidity.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/humidity.png -text
 safety_home/safety_home.service.client/src/main/resources/images/humidity_small.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/info.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/info_small.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/light_off.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/light_off.png -text
 safety_home/safety_home.service.client/src/main/resources/images/light_off_small.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/light_on.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/light_on.png -text
 safety_home/safety_home.service.client/src/main/resources/images/light_on_small.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/lock.png -text
 safety_home/safety_home.service.client/src/main/resources/images/motion.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/motion.png -text
 safety_home/safety_home.service.client/src/main/resources/images/motion_detection.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/motion_small.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/opened_window.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/opened_window.png -text
 safety_home/safety_home.service.client/src/main/resources/images/opened_window_small.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/smoke.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/smoke.png -text
 safety_home/safety_home.service.client/src/main/resources/images/temperature.jpg -text
+safety_home/safety_home.service.client/src/main/resources/images/temperature.png -text
 safety_home/safety_home.service.client/src/main/resources/images/temperature_small.jpg -text
 safety_home/safety_home.service.client/src/main/resources/images/unlock.png -text
 safety_home/safety_home.service.client/src/main/resources/images/window_open.jpg -text
