--- a/food_shopping/food_shopping.service.client/pom.xml
+++ b/food_shopping/food_shopping.service.client/pom.xml
@@ -4,7 +4,7 @@
    <parent>
   	<groupId>org.universAAL.AALapplication</groupId>
   	<artifactId>shopping.pom</artifactId>
-  	<version>D.0.1-SNAPSHOT</version>
+  	<version>E.0.1-SNAPSHOT</version>
   	<relativePath>../shopping.pom/</relativePath>
   </parent>
  
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.shopping</artifactId>
-			<version>1.3.1-SNAPSHOT</version>
+			<version>2.0.0</version>
 		</dependency>		
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
