--- a/ont.safety/pom.xml
+++ b/ont.safety/pom.xml
@@ -27,6 +27,10 @@
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.lighting</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
