--- a/health/health.ui.client/pom.xml
+++ b/health/health.ui.client/pom.xml
@@ -53,6 +53,10 @@
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.ui.core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.container.osgi</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
