added new ontologies to run config.

--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,7 @@ health/health.biomedicalsensors.uiclient/.classpath
 health/health.biomedicalsensors.uiclient/.project
 health/health.biomedicalsensors.uiclient/.settings
 health/health.biomedicalsensors.uiclient/target
+health/health.feature/.classpath
 health/health.feature/.project
 health/health.feature/.settings
 health/health.feature/target
