--- a/health/health.pom/pom.xml
+++ b/health/health.pom/pom.xml
@@ -73,6 +73,11 @@
 				<artifactId>mw.container.junit</artifactId>
 				<version>2.0.1-SNAPSHOT</version>
 			</dependency>
+			<dependency>
+				<groupId>org.universAAL.ontology</groupId>
+				<artifactId>ont.health.measurement</artifactId>
+				<version>2.0.1-SNAPSHOT</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	
