packaging to bundle, using RDF Label instead of Property name for Measurement Type.

--- a/health/health.ui.client/pom.xml
+++ b/health/health.ui.client/pom.xml
@@ -27,6 +27,8 @@
 	<artifactId>health.ui.client</artifactId>
 	<name>Health UI interface</name>
 	<description>UI interface for health service</description>
+	
+	<packaging>bundle</packaging>
 
 	<licenses>
 		<license>
