Real port to MW 2.0.0 (last was 1.3.X) New version is E.0.1-SNAPSHOT

--- a/long_term_behav/ltba.manager/pom.xml
+++ b/long_term_behav/ltba.manager/pom.xml
@@ -4,8 +4,8 @@
 	<parent>
 		<artifactId>ltba.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>D.3.1</version>
 		<relativePath>../ltba.pom</relativePath>
+		<version>E.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>ltba.manager</artifactId>
 	<version>${parent.version}</version>
