--- a/health/health.biomedicalsensors.uiclient/pom.xml
+++ b/health/health.biomedicalsensors.uiclient/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>health.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>D.0.1-SNAPSHOT</version>
+		<version>E.0.1-SNAPSHOT</version>
 		<relativePath>../health.pom</relativePath>
 	</parent>
 
@@ -37,11 +37,11 @@
 			<artifactId>mw.composite</artifactId>
 		</dependency>
 
+
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.biomedicalsensors</artifactId>
 		</dependency>
-
 	</dependencies>
 
 	<build>
