--- a/long_term_behav/ltba.publisher/pom.xml
+++ b/long_term_behav/ltba.publisher/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>ltba.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>D.3.1</version>
+		<version>E.0.1-SNAPSHOT</version>
 		<relativePath>../ltba.pom</relativePath>
 	</parent>
 	<artifactId>ltba.publisher</artifactId>
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
-			<version>1.4.0</version>
+<!-- 			<version>1.4.0</version> -->
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
@@ -41,7 +41,6 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.activityhub</artifactId>
-			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
@@ -78,4 +77,6 @@
 			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
 		</license>
 	</licenses>
+	<version>${parent.version}</version>
+	<groupId>org.universAAL.AALapplication</groupId>
 </project>
