--- a/long_term_behav/ltba.ui/pom.xml
+++ b/long_term_behav/ltba.ui/pom.xml
@@ -10,12 +10,10 @@
 	<artifactId>ltba.ui</artifactId>
 	<packaging>bundle</packaging>
 	<name>LTBA user interface.</name>
-	<version>${parent.version}</version>
 	<dependencies>
 		<dependency>
 			<artifactId>ont.drools</artifactId>
 			<groupId>org.universAAL.ontology</groupId>
-			<version>1.3.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<artifactId>ont.profile</artifactId>
@@ -28,11 +26,15 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.ltba</artifactId>
-			<version>1.3.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.ui.osgi</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.osgi.core</artifactId>
+			<!-- <version>1.4.0</version> -->
 		</dependency>
 	</dependencies>
 	<description>The LTBA service user interface.</description>
@@ -74,4 +76,5 @@
 			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
 		</license>
 	</licenses>
+	<version>${parent.version}</version>
 </project>
