--- a/.gitattributes
+++ b/.gitattributes
@@ -633,6 +633,7 @@ health/health.biomedicalsensors.run/eclipse.launchers/PhysicalActivityMonitor_UI
 health/health.biomedicalsensors.run/eclipse.launchers/PhysicalActivityMonitor_UIClient_1.2.1-SNAPSHOT[!!-~]Drools.launch -text
 health/health.biomedicalsensors.run/eclipse.launchers/PhysicalActivityMonitor_UIClient_1.2.1-SNAPSHOT.launch -text
 health/health.biomedicalsensors.run/eclipse.launchers/PhysicalActivityMonitor_UIClient_1.3.0-drools.launch -text
+health/health.biomedicalsensors.run/eclipse.launchers/PhysicalActivityMonitor_UIClient_2.0.0-drools.launch -text
 health/health.biomedicalsensors.run/ui.dm.mobile/main_menu.txt -text
 health/health.biomedicalsensors.run/ui.dm.mobile/main_menu_el.txt -text
 health/health.biomedicalsensors.run/ui.dm.mobile/main_menu_en.txt -text
