nutritional feature - svn ignore

--- a/.gitignore
+++ b/.gitignore
@@ -239,6 +239,9 @@ nutritional/nutritional.client/.classpath
 nutritional/nutritional.client/.project
 nutritional/nutritional.client/.settings
 nutritional/nutritional.client/target
+nutritional/nutritional.karaf.feature/.project
+nutritional/nutritional.karaf.feature/.settings
+nutritional/nutritional.karaf.feature/target
 nutritional/nutritional.pom/.project
 nutritional/nutritional.pom/.settings
 nutritional/nutritional.pom/target
