shopping parent pom - svn ignore

--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,8 @@ food_shopping/food_shopping.service.server/.classpath
 food_shopping/food_shopping.service.server/.project
 food_shopping/food_shopping.service.server/.settings
 food_shopping/food_shopping.service.server/target
+food_shopping/shopping.pom/.project
+food_shopping/shopping.pom/.settings
 health/PhysicalActivityMonitorModule/app.biomedicalsensors.server/.classpath
 health/PhysicalActivityMonitorModule/app.biomedicalsensors.server/.project
 health/PhysicalActivityMonitorModule/app.biomedicalsensors.server/.settings
