--- a/ontologies/ont.aalfficiencyscores/pom.xml
+++ b/ontologies/ont.aalfficiencyscores/pom.xml
@@ -3,14 +3,14 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.universAAL.ontology.services</groupId>
     <artifactId>ont.pom</artifactId>
-    <version>2.0.0</version>
+    <groupId>org.universAAL.ontology.services</groupId>
+    <version>2.0.1-SNAPSHOT</version>
     <relativePath>../ont.pom</relativePath>
   </parent>
   <groupId>org.universAAL.ontology</groupId>
   <artifactId>ont.aalfficiencyscores</artifactId>
-  <version>2.0.0</version>
+  <version>2.0.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>AALfficiency Service - Scores Ontology</name>
   <build>
