--- a/ontologies/ont.agendaEventSelection/pom.xml
+++ b/ontologies/ont.agendaEventSelection/pom.xml
@@ -1,55 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.universAAL.ontology.services</groupId>
-		<artifactId>ont.pom</artifactId>
-		<version>2.0.0</version>
-		<relativePath>../ont.pom</relativePath>
-	</parent>
-	<groupId>org.universAAL.ontology</groupId>
-	<artifactId>ont.agendaEventSelection</artifactId>
-	<version>2.0.0</version>
-	<packaging>bundle</packaging>
-	<name>Agenda AAL Service Event Selection Ontology</name>
-	<description>Ontology for selecting Agenda and Reminders AAL service events</description>
-	<dependencies>
-		<dependency>
-			<groupId>org.universAAL.support</groupId>
-			<artifactId>itests</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.agenda</artifactId>
-		</dependency>
-	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<compilerArguments>
-						<bootclasspath>${java.home}\lib\rt.jar</bootclasspath>
-					</compilerArguments>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Description>${project.description}</Bundle-Description>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>org.universAAL.ontology.agendaEventSelection,
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>ont.pom</artifactId>
+    <groupId>org.universAAL.ontology.services</groupId>
+    <version>2.0.1-SNAPSHOT</version>
+    <relativePath>../ont.pom</relativePath>
+  </parent>
+  <groupId>org.universAAL.ontology</groupId>
+  <artifactId>ont.agendaEventSelection</artifactId>
+  <version>2.0.1-SNAPSHOT</version>
+  <packaging>bundle</packaging>
+  <name>Agenda AAL Service Event Selection Ontology</name>
+  <description>Ontology for selecting Agenda and Reminders AAL service events</description>
+  <dependencies>
+    <dependency>
+      <groupId>org.universAAL.support</groupId>
+      <artifactId>itests</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.universAAL.ontology</groupId>
+      <artifactId>ont.agenda</artifactId>
+    </dependency>
+  </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <compilerArguments>
+            <bootclasspath>${java.home}\lib\rt.jar</bootclasspath>
+          </compilerArguments>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+            <Bundle-Name>${project.name}</Bundle-Name>
+            <Bundle-Description>${project.description}</Bundle-Description>
+            <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+            <Export-Package>org.universAAL.ontology.agendaEventSelection,
 							org.universAAL.ontology.agendaEventSelection.service</Export-Package>
-						<Private-Package>org.universAAL.ontology;-split-package:=first</Private-Package>
-					</instructions>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+            <Private-Package>org.universAAL.ontology;-split-package:=first</Private-Package>
+          </instructions>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
